--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -506,3 +506,15 @@ a.anchor{
     visibility: hidden;
 }
 
+
+
+
+
+
+
+
+
+.navbar-nav > li > a {
+    font-size: 18px; /* 你可以根据需要调整这个数值 */
+    font-weight: 500; /* 如果觉得太细，可以增加粗细（400-700） */
+}
