--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -514,7 +514,7 @@ a.anchor{
 
 
 
-.navbar-nav > li > a {
-    font-size: 25px; /* 你可以根据需要调整这个数值 */
+.navbar-nav {
+    font-size: 30px; /* 你可以根据需要调整这个数值 */
     font-weight: 500; /* 如果觉得太细，可以增加粗细（400-700） */
 }
